--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/googletest"]
 path = external/googletest
 url = https://github.com/google/googletest.git
+[submodule "third_party/simrank"]
+path = third_party/simrank
+url = https://github.com/roukaour/simrank.git
