--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "external/googletest"]
-path = external/googletest
+[submodule "third_party/googletest"]
+path = third_party/googletest
 url = https://github.com/google/googletest.git
 [submodule "third_party/simrank"]
 path = third_party/simrank
