--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/jest": "^21.1.2",
     "@types/node": "^8.0.24",
     "bindings": "^1.3.0",
+    "change-case": "^3.0.1",
     "electron": "^1.7.8",
     "electron-rebuild": "^1.6.0",
     "jest": "^21.2.1",
@@ -11,7 +12,6 @@
     "node-addon-api": "^0.6.3",
     "node-gyp": "^3.6.2",
     "nunjucks": "^3.0.1",
-    "snake-case": "^2.1.0",
     "ts-jest": "^21.1.0",
     "typescript": "^2.4.2",
     "webidl2": "^4.1.0"
